# BookRecommendation

./: .env  README.md  docker-compose.yaml  pyproject.toml
etl_pipeline/: pyproject.toml
etl_pipeline/src/etl_pipeline/defs/ingestion/: bronze.py
