[project]
name = "etl_pipeline"
requires-python = ">=3.10,<3.15"
version = "0.1.0"
dependencies = [
    "dagster==1.12.15",
    "dagster-databricks>=0.28.15",
    "dagster-dg-cli>=1.12.15",
    "dagster-webserver>=1.12.15",
]

[dependency-groups]
dev = [
    "dagster-webserver",
    "dagster-dg-cli",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
force-include = { "pyproject.toml" = "pyproject.toml" }

[tool.dg]
directory_type = "project"

[tool.dg.project]
root_module = "etl_pipeline"
registry_modules = [
    "etl_pipeline.components.*",
]


